{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 99,
  "lineage": "57d04ea0-2d57-8847-897d-c43bf8e3085d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-0955759216a292e0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0955759216a292e0b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6d231e30b0766cb",
            "private_dns": "ip-10-0-1-186.ec2.internal",
            "private_ip": "10.0.1.186",
            "public_ip": "3.235.168.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0312db5188cfc995a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0accff269550dbbd9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f274da1f7d86c8e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploye_key",
            "aws_security_group.private_security_group",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-08e29d731b969b877",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e29d731b969b877",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01226f1eae3fb1af5",
            "private_dns": "ip-10-0-1-81.ec2.internal",
            "private_ip": "10.0.1.81",
            "public_ip": "18.206.148.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba3d537d2e598fd5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0accff269550dbbd9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c4915fefe9d6b76"
            ]
          },
          "dependencies": [
            "aws_key_pair.deploye_key",
            "aws_security_group.public_security_group",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-0886a67fff586fb4d",
            "description": "allow app to connect to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0886a67fff586fb4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "from web",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-05f274da1f7d86c8e",
            "description": "Allow ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f274da1f7d86c8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from my machince",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to web",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-04c4915fefe9d6b76",
            "description": "Allow traffic to move throug",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c4915fefe9d6b76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "to web",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "radis_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-0626ba87306955c9a",
            "description": "allow app to connect to radis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0626ba87306955c9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "from web to radis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "radis",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "radis"
            },
            "timeouts": null,
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:internet-gateway/igw-09e2bedce2083502b",
            "id": "igw-09e2bedce2083502b",
            "owner_id": "779860661651",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e2bedce2083502b",
            "id": "r-rtb-034c5bf1af887430b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034c5bf1af887430b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e2bedce2083502b",
            "id": "r-rtb-0a04bbcf69dd4df051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a04bbcf69dd4df05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-0a04bbcf69dd4df05",
            "id": "rtb-0a04bbcf69dd4df05",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-034c5bf1af887430b",
            "id": "rtb-034c5bf1af887430b",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0861fcc0bf31a5c4a",
            "route_table_id": "rtb-034c5bf1af887430b",
            "subnet_id": "subnet-025af9f5bd3f7df0c"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.private1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0048351425451a2",
            "route_table_id": "rtb-034c5bf1af887430b",
            "subnet_id": "subnet-07750dae186bed35c"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.private2",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e57b828f77233b",
            "route_table_id": "rtb-034c5bf1af887430b",
            "subnet_id": "subnet-0accff269550dbbd9"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public1",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915dd9afb4ab28ae",
            "route_table_id": "rtb-034c5bf1af887430b",
            "subnet_id": "subnet-037ee6c9253cc5099"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public2",
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-025af9f5bd3f7df0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-025af9f5bd3f7df0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-07750dae186bed35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-07750dae186bed35c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0accff269550dbbd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0accff269550dbbd9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-037ee6c9253cc5099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-037ee6c9253cc5099",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-080c889df34419586"
          },
          "dependencies": [
            "module.network.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:vpc/vpc-080c889df34419586",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df6aea95b622eaf5",
            "default_route_table_id": "rtb-014ae6e42a806fd7f",
            "default_security_group_id": "sg-06be2acd6fca3897d",
            "dhcp_options_id": "dopt-6b85a311",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080c889df34419586",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014ae6e42a806fd7f",
            "owner_id": "779860661651",
            "tags": {
              "name": "iti"
            },
            "tags_all": {
              "name": "iti"
            }
          }
        }
      ]
    }
  ]
}